Fix misaligned server select card in TV layout

--- a/src/components/emby-scroller/emby-scroller.css
+++ b/src/components/emby-scroller/emby-scroller.css
@@ -13,6 +13,11 @@
     margin-right: 1.2em;
 }
 
+.servers > .card > .cardBox {
+    margin-left: .6em;
+    margin-right: .6em;
+}
+
 .layout-tv .emby-scroller,
 .layout-mobile .emby-scroller {
     padding-left: 3.3%;
